spacing fixed on employer view

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -67,6 +67,7 @@ a.dropdown-item {
   justify-content: center;
   align-items: center;
   opacity: 80%;
-  margin: 8px;
+  margin: 4px;
   border-radius: 4px;
+  padding: 2px;
 }
